src/components/button/button.css
.button {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  border-radius: 5px;
  background-color: transparent;
  font-size: 25px;
  font-weight: bold;
  margin: 20px 0;
  height: 75px;
  width: 200px;
  box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.09);
  border: none;
  cursor: pointer;
}

.button:hover {
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
}

.button:active {
  box-shadow: none;
}

